departage des fichier en foncction des fonctionnalité crud

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
                 <option value="sport">Sport</option>
                 <option value="sante">Santé</option>
                 <option value="education">Éducation</option>
-                <option value="politique">Technologie</option>
-                <option value="sport">Société</option>
-                <option value="sante">Business</option>
-                <option value="education">Economie</option>
+                <option value="education">Économie</option>
             </select>
 
             <label for="description">Message</label>
@@ -36,6 +33,9 @@
 
     <div id="messages"></div>
     
-    <script src="script.js"></script>
+    <script type="module" src="delete.js"></script>
+    <script type="module" src="edit.js"></script>
+    <script type="module" src="approve.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
