Validation des champs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <option value="sport">Sport</option>
                 <option value="sante">Santé</option>
                 <option value="education">Éducation</option>
-                <option value="education">Économie</option>
+                <option value="economie">Économie</option>
             </select>
 
             <label for="description">Message</label>
