Modification de la forme des idées sous format card

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Application de boîte à idées</title>
 </head>
 <body>
-    <h1>Boîte à idées</h1>
+    <h1>Partagez vos idées</h1>
     <div class="container">
         <form id="formeIdee" action="">
             <label for="titre">Libellé</label>
@@ -27,10 +27,10 @@
 
             <button type="submit">Soumettre</button>
         </form>
-        <div id="listeIdee"></div>
+        <div id="messages"></div>
     </div>
-    <div id="messages"></div>
-    
+    <div id="listeIdee" class="idea-list"></div>
+
     <script type="module" src="delete.js"></script>
     <script type="module" src="edit.js"></script>
     <script type="module" src="approve.js"></script>
