--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             </select>
 
             <label for="description">Message</label>
-            <textarea id="description" name="description" required></textarea>
+            <textarea id="description" name="description" maxlength="255" required></textarea>
+           
 
             <button type="submit">Soumettre</button>
         </form>
